# eesd-mast

./: .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: publish-api-container-dev.yml  publish-api-container.yml  publish-container.yml  publish-dev-container.yml  publish-ui-container-dev.yml  publish-ui-container.yml  pytest.yml
backend/: Dockerfile  Makefile  README.md  prestart.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: c29a01976a4d_create_tables.py  c29a01976a4d_create_tests.py
backend/app/: auth.py  config.py  db.py  main.py
backend/app/routers/: ping.py  root.py
backend/app/services/analysis/: models.py  views.py
backend/app/services/experiments/: models.py  service.py  views.py
backend/app/services/experiments_download/: views.py
backend/app/services/files/: s3client.py  size.py  views.py  vtk2p.py
backend/app/services/numericalmodels/: models.py  service.py  views.py
backend/app/services/references/: models.py  service.py  views.py
backend/app/services/runresults/: models.py  service.py  views.py
backend/app/utils/: file_nodes.py  mimetype.py  query.py
backend/mast/: auth.py  config.py  database.py  main.py  settings.toml
backend/mast/services/experiments/: api.py  models.py  schemas.py  service.py
backend/mast/services/files/: api.py  s3client.py
backend/mast/services/references/: api.py  models.py  schemas.py  service.py
backend/mast/services/tests/: api.py  models.py  schemas.py  service.py
backend/migrations/: env.py
backend/migrations/versions/: 125fb95f2eca_experiment_counts.py  125fb95f2eca_models_view.py  141caa602606_building_heights.py  16aea2c3ecca_experiment_files.py  1f1b03a44b1d_materials.py  51e5feabdf3a_building_id.py  8e85e114bded_experiment_year.py  b244a9e716ab_numerical_models.py  c29a01976a4d_init.py  c372378843aa_building_plans.py  e966323d5395_3d_models.py
backend/scripts/: Plots_from_API.ipynb  Plots_from_Database_v01.ipynb  seed.py
frontend/: .eslintrc-auto-import.json  README.md  package-lock.json  package.json  quasar.config.js
frontend/src/: auto-imports.d.ts
frontend/src/assets/: acknowledgements.md  cite.md  data-submission.md  fragilities.md  overview.md  vulnerabilities.md
frontend/src/boot/: axios.ts  pinia.ts
frontend/src/components/: AppHeader.vue  AppToolbar.vue  ExperimentAggregations.vue  ExperimentFields.vue  ExperimentFilesView.vue  ExperimentFilters.vue  ExperimentModelView.vue  ExperimentSummary.vue  ExperimentTestView.vue  ExperimentView.vue  ExperimentsTable.vue  FieldsList.vue  FileNodeChart.vue  FileNodeMarkdown.vue  FileNodeTxt.vue  ImageDialog.vue  MetricsBanner.vue  NumericalModelFields.vue  PeriodChart.vue  ReferenceView.vue  ReferencesTable.vue  RunResultsView.vue  SimpleDialog.vue  VtkViewer.vue  models.ts
frontend/src/css/: app.scss  quasar.variables.scss
frontend/src/layouts/: BuildingsLayout.vue  MainLayout.vue
frontend/src/pages/: BuildingPage.vue  BuildingsPage.vue  ContactUsPage.vue  DataSubmissionPage.vue  ErrorNotFound.vue  IndexPage.vue  ModelPage.vue  (+2 more)
scripts/: Plots_from_Database_v01.ipynb
(+22 files in other folders)
