[tool.poetry]
name = "mast"
version = "0.3.0"
description = ""
license = "GPL-3.0-or-later"
authors = ["Pierre Guilbert <pierre.guilbert@epfl.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiobotocore = "^2.4.2"
fastapi = "^0.95.2"
dynaconf = "^3.1.7"
SQLAlchemy = {extras = ["asyncio"], version = "^2.0.4"}
alembic = "^1.7.5"
psycopg2 = "^2.9.2"
uvicorn = "^0.22.0"
chardet = "^5.0.0"
python-dateutil = "^2.8.2"
python-multipart = "^0.0.6"
requests = "^2.28.2"
aiofiles = "^22.1.0"
Pillow = "^9.4.0"
pandas = "^2.1.3"
openpyxl = "^3.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pre-commit = "^3.0.4"
flake8 = "^6.0.0"
black = "^23.1.0"
uvicorn = "^0.22.0"
python-dotenv = "0.21.0"
sqlalchemy = {extras = ["mypy"], version = "^2.0.4"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[[tool.mypy.overrides]]
module = "dynaconf"
ignore_missing_imports = true
