[tool.poetry]
name = "mast-api"
version = "0.1.0"
description = "MAsonryShake-Table API"
license = "GPL-3.0-or-later"
authors = ["Yannick Marcon <yannick.marcon@epfl.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = "^0.104.1"
uvicorn = "^0.23.2"
sqlmodel = "^0.0.12"
asyncpg = "^0.29.0"
alembic = "^1.12.1"
dynaconf = "^3.1.7"
psycopg2 = "^2.9.2"
chardet = "^5.0.0"
python-dateutil = "^2.8.2"
python-multipart = "^0.0.6"
requests = "^2.28.2"
Pillow = "^9.4.0"
pandas = "^2.1.3"
openpyxl = "^3.1.2"
aiobotocore = "^2.8.0"
vtk = "^9.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
pre-commit = "^3.0.4"
flake8 = "^6.0.0"
black = "^23.1.0"
python-dotenv = "0.21.0"
sqlalchemy = {extras = ["mypy"], version = "^2.0.4"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[[tool.mypy.overrides]]
module = "dynaconf"
ignore_missing_imports = true
